# TN619

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
compiler/tnc/: Cargo.toml
compiler/tnc/src/: ast.rs  interp.rs  jit.rs  lexer.rs  main.rs  parser.rs  server.rs  token.rs  typeck.rs
compiler/tnc/tests/: run_examples.rs
docs/: ROADMAP.md
docs/design/: 02-language-features.md  05-memory-model.md  positioning.md
docs/roadmap/: NEXT-PHASES.md  README.md  phase-01-vision.md  phase-02-language-design.md  phase-03-bilingual.md  phase-04-compiler-architecture.md  phase-05-memory-model.md  phase-06-ecosystem.md  phase-07-stdlib.md  phase-08-roadmap.md  phase-09-project-structure.md  phase-10-mvp.md
examples/: adult_ar.tn  adult_en.tn  adult_fr.tn  arrays_ar.tn  arrays_en.tn  arrays_fr.tn  bad_exhaustive.tn  bad_type.tn  counter_mut.tn  floats_ar.tn  floats_en.tn  interp_ar.tn  interp_en.tn  jit_fib.tn  mixed.tn  ownership.tn  points_ar.tn  points_en.tn  points_fr.tn  polyglot.tn  result_ar.tn  result_en.tn  result_fr.tn  shapes_ar.tn  shapes_en.tn  shapes_fr.tn  trilingue.tn
